travaille sur les listes

--- a/cartes-restaurants/lapalettedugout.html
+++ b/cartes-restaurants/lapalettedugout.html
@@ -21,51 +21,64 @@
           <img class="header__img-container__image" src="./../assets/logo/ohmyfood.png" alt="Ohmyfood logo" />
         </div>
     </header>  
-    <article>
-      <img src="./../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="jay-wennington image" />
-    </article>    
-<main>
-<h1>La palette du goût<i class="fa-solid fa-heart"></i></h1>
-<section class="entrees">
-    <h2>Entrées</h2>
+    <div class=picture-jay>
+      <img class="picture-jay__img"  src="./../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="jay-wennington image" />
+    </div>    
 
-    <h3>Fricassée d'escargots</h3>
-    <h4>Au piment d'Espelette 25<i class="fa-solid fa-euro-sign"></i></h4>
-
-    <h3>Foie gras de canard mi-cuit</h3>
-    <h4>Et ses copeaux de truffe noire 35<i class="fa-solid fa-euro-sign"></i></h4>
-
-    <h3>Œuf au plat</h3>
-    <h4>Assaisonné à la truffe sur lit de caviar 20<i class="fa-solid fa-euro-sign"></i></h4>
+<main class="fond-carte">
+<h1 class="palettedugout-title">La palette du goût<i class="fa-regular fa-heart"></i></h1>
+<section>
+    <h2>ENTREES</h2>
+    <ul>
+        <li>
+            <h3>Fricassée d'escargots</h3>
+            <p>Au piment d'Espelette 25<i class="fa-solid fa-euro-sign"></i><p>
+        </li>        
+        <li>
+            <h3>Foie gras de canard mi-cuit</h3>
+            <p>Et ses copeaux de truffe noire 35<i class="fa-solid fa-euro-sign"></i></p>
+        </li>   
+        <li>
+            <h3>Œuf au plat</h3>
+            <p>Assaisonné à la truffe sur lit de caviar 20<i class="fa-solid fa-euro-sign"></i></p>
+    </li>   
+    </ul>
 </section>
 
-<section class="plats">
-    <h2>Plats</h2>
-
-    <h3>Filet de bœuf aux herbes</h3>
-    <h4>Accompagné de sa ribambelle de légumes 40<i class="fa-solid fa-euro-sign"></i></h4>
-
-    <h3>Parmentier de queue de bœuf</h3>
-    <h4>À la truffe noire sur sa purée de panais 35<i class="fa-solid fa-euro-sign"></i></h4>
-
-    <h3>Filet de turbot</h3>
-    <h4>Aux agrumes 44<i class="fa-solid fa-euro-sign"></i></h4>
-
+<section>
+    <h2>PLATS</h2>
+<ul>
+    <li>
+        <h3>Filet de bœuf aux herbes</h3>
+        <p>Accompagné de sa ribambelle de légumes 40<i class="fa-solid fa-euro-sign"></i></p>
+    </li>
+    <li>
+        <h3>Parmentier de queue de bœuf</h3>
+        <p>À la truffe noire sur sa purée de panais 35<i class="fa-solid fa-euro-sign"></i></p>
+    </li>
+    <li>
+        <h3>Filet de turbot</h3>
+        <p>Aux agrumes 44<i class="fa-solid fa-euro-sign"></i></p>
+    </li>
+</ul>
 </section>
 
-<section class="desserts">
-    <h2>Desserts</h2>
+<section>
+    <h2>DESSERTS</h2>
+<ul>
+    <li><h3>Paris-Brest</h3>
+        <p>Revisité 18<i class="fa-solid fa-euro-sign"></i></p>
+    </li>
 
-    <h3>Paris-Brest</h3>
-    <h4>Revisité 18<i class="fa-solid fa-euro-sign"></i></h4>
-
-    <h3>Macaron au chocolat d'exception </h3>
-    <h4>Et glace à la vanille de Madagascar 22<i class="fa-solid fa-euro-sign"></i></h4>
-
-    <h3>Mousse au chocolat </h3>
-    <h4>Au piment d'Espelette et à la truffe noire 23<i class="fa-solid fa-euro-sign"></i></h4>
-
-
+    <li>
+        <h3>Macaron au chocolat d'exception </h3>
+        <p>Et glace à la vanille de Madagascar 22<i class="fa-solid fa-euro-sign"></i></p>
+    </li>
+    <li>
+        <h3>Mousse au chocolat </h3>
+        <p>Au piment d'Espelette et à la truffe noire 23<i class="fa-solid fa-euro-sign"></i></p>
+    </li>
+</ul>
 </section>
 
 <section><button>Commander</button></section>
