--- a/cartes-restaurants/lapalettedugout.html
+++ b/cartes-restaurants/lapalettedugout.html
@@ -18,7 +18,7 @@
 <body>
     <header class="header">
         <div class="header__img-container">
-          <img class="header__img-container__image" src="./../assets/logo/ohmyfood.png" alt="Ohmyfood logo" />
+            <i class="fa-solid fa-arrow-left"></i><img class="header__img-container__image" src="./../assets/logo/ohmyfood.png" alt="Ohmyfood logo" />
         </div>
     </header>  
     <div class=picture-jay>
@@ -27,61 +27,62 @@
 
 <main class="fond-carte">
 <h1 class="palettedugout-title">La palette du goût<i class="fa-regular fa-heart"></i></h1>
-<section>
-    <h2>ENTREES</h2>
-    <ul>
-        <li>
-            <h3>Fricassée d'escargots</h3>
-            <p>Au piment d'Espelette 25<i class="fa-solid fa-euro-sign"></i><p>
+
+<section class="entrees">
+    <h2 class="entrees__title">ENTREES</h2>
+    <ul class="blocks">
+        <li class="listes">
+            <h3 class="listes__ennonces_menus">Fricassée d'escargots</h3>
+            <p class="listes__accompagnements">Au piment d'Espelette <span class="price">25€</span></p>   
         </li>        
-        <li>
-            <h3>Foie gras de canard mi-cuit</h3>
-            <p>Et ses copeaux de truffe noire 35<i class="fa-solid fa-euro-sign"></i></p>
+        <li class="listes">
+            <h3 class="listes__ennonces_menus">Foie gras de canard mi-cuit</h3>
+            <p class="listes__accompagnements">Et ses copeaux de truffe noire <span class="price">35€</span> </p>
         </li>   
-        <li>
-            <h3>Œuf au plat</h3>
-            <p>Assaisonné à la truffe sur lit de caviar 20<i class="fa-solid fa-euro-sign"></i></p>
+        <li class="listes">
+            <h3 class="listes__ennonces_menus">Œuf au plat</h3>
+            <p class="listes__accompagnements">Assaisonné à la truffe sur lit de caviar <span class="price">20€</span></p>
     </li>   
     </ul>
 </section>
 
-<section>
-    <h2>PLATS</h2>
-<ul>
-    <li>
-        <h3>Filet de bœuf aux herbes</h3>
-        <p>Accompagné de sa ribambelle de légumes 40<i class="fa-solid fa-euro-sign"></i></p>
-    </li>
-    <li>
-        <h3>Parmentier de queue de bœuf</h3>
-        <p>À la truffe noire sur sa purée de panais 35<i class="fa-solid fa-euro-sign"></i></p>
-    </li>
-    <li>
-        <h3>Filet de turbot</h3>
-        <p>Aux agrumes 44<i class="fa-solid fa-euro-sign"></i></p>
-    </li>
-</ul>
+<section class="plats">
+    <h2 class="plats__title">PLATS</h2>
+    <ul class="blocks">
+        <li class="listes">
+            <h3 class="listes__ennonces_menus">Filet de bœuf aux herbes</h3>
+            <p class="listes__accompagnements">Accompagné de sa ribambelle de légumes <span class="price">40€</span></p>
+        </li>
+        <li class="listes">
+            <h3 class="listes__ennonces_menus" >Parmentier de queue de bœuf</h3>
+            <p class="listes__accompagnements">À la truffe noire sur sa purée de panais <span class="price">35€</span></p>
+        </li>
+        <li class="listes">
+            <h3 class="listes__ennonces_menus" >Filet de turbot</h3>
+            <p class="listes__accompagnements">Aux agrumes<span class="price">44€</span></p>
+        </li>
+    </ul>
 </section>
 
-<section>
-    <h2>DESSERTS</h2>
-<ul>
-    <li><h3>Paris-Brest</h3>
-        <p>Revisité 18<i class="fa-solid fa-euro-sign"></i></p>
-    </li>
-
-    <li>
-        <h3>Macaron au chocolat d'exception </h3>
-        <p>Et glace à la vanille de Madagascar 22<i class="fa-solid fa-euro-sign"></i></p>
-    </li>
-    <li>
-        <h3>Mousse au chocolat </h3>
-        <p>Au piment d'Espelette et à la truffe noire 23<i class="fa-solid fa-euro-sign"></i></p>
-    </li>
-</ul>
+<section class="desserts">
+    <h2 class="desserts__title" >DESSERTS</h2>
+    <ul class="blocks">
+        <li class="listes">
+            <h3 class="listes__ennonces_menus">Paris-Brest</h3>
+            <p class="listes__accompagnements">Revisité <span class="price">18€</span></p>
+        </li>
+        <li class="listes">
+            <h3 class="listes__ennonces_menus">Macaron au chocolat d'exception </h3>
+            <p class="listes__accompagnements">Et glace à la vanille de Madagascar<span class="price">22€</span></p>
+        </li>
+        <li class="listes" >
+            <h3 class="listes__ennonces_menus" >Mousse au chocolat </h3>
+            <p class="listes__accompagnements">Au piment d'Espelette et à la truffe noire<span class="price">23€</span></p>
+        </li>
+    </ul>
 </section>
 
-<section><button>Commander</button></section>
+<section><button class="btn_commander">Commander</button></section>
 
 
 </main>
