suites avec quelques animations

--- a/cartes-restaurants/lapalettedugout.html
+++ b/cartes-restaurants/lapalettedugout.html
@@ -18,7 +18,7 @@
 <body>
     <header class="header">
         <div class="header__img-container">
-            <i class="fa-solid fa-arrow-left"></i><img class="header__img-container__image" src="./../assets/logo/ohmyfood.png" alt="Ohmyfood logo" />
+            <span><i class="fa-solid fa-arrow-left"></i></span><img class="header__img-container__image" src="./../assets/logo/ohmyfood.png" alt="Ohmyfood logo" />
         </div>
     </header>  
     <div class=picture-jay>
@@ -26,7 +26,7 @@
     </div>    
 
 <main class="fond-carte">
-<h1 class="palettedugout-title">La palette du goût<i class="fa-regular fa-heart"></i></h1>
+<h1 class="palettedugout-title">La palette du goût<span><i class="fa-regular fa-heart"></i></span></h1>
 
 <section class="entrees">
     <h2 class="entrees__title">ENTREES</h2>
@@ -82,7 +82,9 @@
     </ul>
 </section>
 
-<section><button class="btn_commander">Commander</button></section>
+<section class="bouton-commander" >
+    <button class="btn_commander">Commander</button>
+</section>
 
 
 </main>
