--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     
   </head>
   <body>
+
     <header class="header">
+     <div class=" loader"></div>
       <div class="header__img-container">
         <img class="header__img-container__image" src="assets/logo/ohmyfood.png" alt="Ohmyfood logo" />
       </div>
@@ -44,6 +46,8 @@
     </section>
 
     <main>
+
+
       <section class="restaurants">
         <h2 class="restaurants__title">Restaurants</h2>
         <article class="restaurant">
