responsive et animations fin

--- a/cartes-restaurants/alafrançaise.html
+++ b/cartes-restaurants/alafrançaise.html
@@ -22,7 +22,7 @@
             <a class="go" href="../index.html"><span ><i class="fa-solid fa-arrow-left"></i></span></a><img class="header__img-container__image" src="./../assets/logo/ohmyfood.png" alt="Ohmyfood logo" />
         </div>
     </header>  
-    <div class=picture-toa>
+    <div class="picture-toa">
       <img class="picture-toa__img"  src="./../assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="toa-heftiba image" >
     </div>    
 
@@ -34,18 +34,26 @@
     <h2 class="entrees__title">ENTREES</h2>
     <ul class="blocks">
         <li class="listes">
-            <h3 class="listes__ennonces_menus">Tartare de poulpe acidulé</h3> 
-            <p class="listes__accompagnements">Aux zestes d'orange <span class="price">25€</span></p>
-            
+            <div>
+                <h3 class="listes__ennonces_menus">Tartare de poulpe acidulé</h3> 
+                <p class="listes__accompagnements"></p><span>Aux zestes d'orange</span> <span class="price">25€</span>
+            </div>
+            <div class="element-hide"></div>
         </li>        
         <li class="listes">
-            <h3 class="listes__ennonces_menus">Velouté de légumes d'antan</h3>
-            <p class="listes__accompagnements">Carotte, panais, topinambour<span class="price">35€</span> </p>
+            <div>
+                <h3 class="listes__ennonces_menus">Velouté de légumes d'antan</h3>
+                <p class="listes__accompagnements"></p><span>Carotte, panais, topinambour</span><span class="price">35€</span> 
+            </div>
+            <div class="element-hide"></div>
         </li>   
         <li class="listes">
-            <h3 class="listes__ennonces_menus">Soupe à l'oignon</h3>
-            <p class="listes__accompagnements">Revisitée<span class="price">20€</span></p>
-    </li>   
+            <div>
+                <h3 class="listes__ennonces_menus">Soupe à l'oignon</h3>
+                <p class="listes__accompagnements"></p><span>Revisitée</span><span class="price">20€</span>
+            </div>
+            <div class="element-hide"></div>
+        </li>   
     </ul>
 </section>
 
@@ -53,16 +61,25 @@
     <h2 class="plats__title">PLATS</h2>
     <ul class="blocks">
         <li class="listes">
-            <h3 class="listes__ennonces_menus">Coquilles Saint-Jacques</h3>
-            <p class="listes__accompagnements">Accompagnées d'une purée de panais<span class="price">40€</span></p>
+            <div>
+                <h3 class="listes__ennonces_menus">Coquilles Saint-Jacques</h3>
+                <p class="listes__accompagnements"></p><span>Accompagnées d'une purée de panais</span><span class="price">40€</span>
+            </div>
+            <div class="element-hide"></div>
         </li>
         <li class="listes">
-            <h3 class="listes__ennonces_menus" >Magret de canard</h3>
-            <p class="listes__accompagnements">Et parmentier de pommes de terre<span class="price">35€</span></p>
+            <div>
+                <h3 class="listes__ennonces_menus" >Magret de canard</h3>
+                <p class="listes__accompagnements"></p><span>Et parmentier de pommes de terre</span><span class="price">35€</span>
+            </div>
+            <div class="element-hide"></div>
         </li>
         <li class="listes">
-            <h3 class="listes__ennonces_menus" >Pigeonneau d’Ille-et-Vilaine</h3>
-            <p class="listes__accompagnements">Sur son lit de gnocchis aux légumes<span class="price">44€</span></p>
+            <div>
+                <h3 class="listes__ennonces_menus" >Pigeonneau d’Ille-et-Vilaine</h3>
+                <p class="listes__accompagnements">Sur son lit de gnocchis aux légumes<span class="price">44€</span></p>
+            </div>
+            <div class="element-hide"></div>
         </li>
     </ul>
 </section>
@@ -71,17 +88,23 @@
     <h2 class="desserts__title" >DESSERTS</h2>
     <ul class="blocks">
         <li class="listes">
-            <h3 class="listes__ennonces_menus">Pétales de violettes glacés</h3>
-            <p class="listes__accompagnements">Et purée de noisettes<span class="price">18€</span></p>
+                <h3 class="listes__ennonces_menus">Pétales de violettes glacés</h3>
+                <p class="listes__accompagnements"></p><span>Et purée de noisettes</span><span class="price">18€</span>
+            </div>
+            <div class="element-hide"></div>
         </li>
         <li class="listes">
-            <h3 class="listes__ennonces_menus">Fondant au chocolat</h3>
-            <p class="listes__accompagnements">Revisité<span class="price">22€</span></p>
+            <div>
+                <h3 class="listes__ennonces_menus">Fondant au chocolat</h3>
+                <p class="listes__accompagnements"></p><span>Revisité</span><span class="price">22€</span>
+        </div>
+        <div class="element-hide"></div>
         </li>
         <li class="listes" >
-            <h3 class="listes__ennonces_menus" >Millefeuille croustillant</h3>
-            <p class="listes__accompagnements">Myrtilles et pâte d’amande<span class="price">23€</span></p>
-            
+            <div>
+                <h3 class="listes__ennonces_menus" >Millefeuille croustillant</h3>
+                <p class="listes__accompagnements"></p><span>Myrtilles et pâte d’amande</span><span class="price">23€</span>
+            </div>
         </li>
     </ul>
 </section>
@@ -97,7 +120,7 @@
     <div class="footer__lists" ><a class="footer__link"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a>
         <a class="footer__link"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a>
         <a class="footer__link">Mentions légales</a>
-        <a class="footer__link">Contact</a>
+        <a class="footer__link" href="mailto:contact@ohmyfood.com">Contact</a>
     </div>
 </footer>
 
