--- a/cartes-restaurants/ledelicedessens.html
+++ b/cartes-restaurants/ledelicedessens.html
@@ -34,18 +34,26 @@
     <h2 class="entrees__title">ENTREES</h2>
     <ul class="blocks">
         <li class="listes">
-            <h3 class="listes__ennonces_menus">Tartare de thon</h3> 
-            <p class="listes__accompagnements">Assaisonné au yuzu<span class="price">25€</span></p><div class="element-hide"></div>
-            
+            <div>
+                <h3 class="listes__ennonces_menus">Tartare de thon</h3> 
+                <p class="listes__accompagnements"></p><span>Assaisonné au yuzu</span><span class="price">25€</span>
+            </div>
+            <span class="element-hide"></span>
         </li>        
         <li class="listes">
-            <h3 class="listes__ennonces_menus">Bouchée de homard croustillant </h3>
-            <p class="listes__accompagnements">Et sa farandole de petits légumes <span class="price">35€</span> </p>
+            <div>
+                <h3 class="listes__ennonces_menus">Bouchée de homard croustillant </h3>
+                <p class="listes__accompagnements"></p><span>Et sa farandole de petits légumes</span> <span class="price">35€</span> 
+            </div>
+            <span class="element-hide"></span>
         </li>   
         <li class="listes">
-            <h3 class="listes__ennonces_menus">Poulet rôti aux herbes de Provence</h3>
-            <p class="listes__accompagnements">Et sa crème de truffe<span class="price">20€</span></p>
-    </li>   
+            <div>
+                <h3 class="listes__ennonces_menus">Poulet rôti aux herbes de Provence</h3>
+                <p class="listes__accompagnements"></p><span>Et sa crème de truffe</span><span class="price">20€</span>
+            </div>
+            <span class="element-hide"></span>
+        </li>   
     </ul>
 </section>
 
@@ -53,16 +61,25 @@
     <h2 class="plats__title">PLATS</h2>
     <ul class="blocks">
         <li class="listes">
-            <h3 class="listes__ennonces_menus">Poulet rôti aux herbes de Provence </h3>
-            <p class="listes__accompagnements">Et sa crème de truffe<span class="price">40€</span></p>
+            <div>
+                <h3 class="listes__ennonces_menus">Poulet rôti aux herbes de Provence </h3>
+                <p class="listes__accompagnements"></p><span>Et sa crème de truffe</span><span class="price">40€</span>
+            </div>
+            <span class="element-hide"></span>
         </li>
         <li class="listes">
-            <h3 class="listes__ennonces_menus" >Langouste rôtie </h3>
-            <p class="listes__accompagnements">Et ses légumes de saison<span class="price">35€</span></p>
+            <div>
+                <h3 class="listes__ennonces_menus" >Langouste rôtie </h3>
+                <p class="listes__accompagnements"></p><span>Et ses légumes de saison</span><span class="price">35€</span>
+            </div>
+            <span class="element-hide"></span>
         </li>
         <li class="listes">
-            <h3 class="listes__ennonces_menus" >Côte de bœuf Angus </h3>
-            <p class="listes__accompagnements">Et sa purée de panais<span class="price">44€</span></p>
+            <div>
+                <h3 class="listes__ennonces_menus" >Côte de bœuf Angus </h3>
+                <p class="listes__accompagnements"></p><span>Et sa purée de panais</span><span class="price">44€</span>
+            </div>
+            <span class="element-hide"></span>
         </li>
     </ul>
 </section>
@@ -71,17 +88,25 @@
     <h2 class="desserts__title" >DESSERTS</h2>
     <ul class="blocks">
         <li class="listes">
-            <h3 class="listes__ennonces_menus">Farandole de desserts</h3>
-            <p class="listes__accompagnements">Du chef<span class="price">18€</span></p>
+            <div>
+                <h3 class="listes__ennonces_menus">Farandole de desserts</h3>
+                <p class="listes__accompagnements"></p><span>Du chef</span><span class="price">18€</span>
+            </div>
+            <span class="element-hide"></span>
         </li>
         <li class="listes">
-            <h3 class="listes__ennonces_menus">Crème brûlée</h3>
-            <p class="listes__accompagnements">Revisitée<span class="price">22€</span></p>
+            <div>
+                <h3 class="listes__ennonces_menus">Crème brûlée</h3>
+                <p class="listes__accompagnements"></p><span>Revisitée</span><span class="price">22€</span>
+            </div>
+            <span class="element-hide"></span>
         </li>
         <li class="listes" >
-            <h3 class="listes__ennonces_menus" >Tiramisu</h3>
-            <p class="listes__accompagnements">A la noisette<span class="price">23€</span></p>
-            
+            <div>
+                <h3 class="listes__ennonces_menus" >Tiramisu</h3>
+                <p class="listes__accompagnements"></p><span>A la noisette</span><span class="price">23€</span>
+            </div>
+            <span class="element-hide"></span>
         </li>
     </ul>
 </section>
@@ -97,7 +122,7 @@
     <div class="footer__lists" ><a class="footer__link"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a>
         <a class="footer__link"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a>
         <a class="footer__link">Mentions légales</a>
-        <a class="footer__link">Contact</a>
+        <a class="footer__link" href="mailto:contact@ohmyfood.com">Contact</a>
     </div>
 </footer>
 
