--- a/cartes-restaurants/noteenchantee.html
+++ b/cartes-restaurants/noteenchantee.html
@@ -22,7 +22,7 @@
             <a class="go" href="../index.html"><span ><i class="fa-solid fa-arrow-left"></i></span></a><img class="header__img-container__image" src="./../assets/logo/ohmyfood.png" alt="Ohmyfood logo" />
         </div>
     </header>  
-    <div class=picture-stil>
+    <div class="picture-stil">
       <img class="picture-stil__img"  src="./../assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="stil-u2L image" />
     </div>    
 
@@ -34,18 +34,26 @@
     <h2 class="entrees__title">ENTREES</h2>
     <ul class="blocks">
         <li class="listes">
-            <h3 class="listes__ennonces_menus">Ravioles de foie gras</h3>
-            <p class="listes__accompagnements">Accompagnées de leur crème à la truffe<span class="price">25€</span></p>
-            
+            <div>
+                <h3 class="listes__ennonces_menus">Ravioles de foie gras</h3>
+                <p class="listes__accompagnements"></p><span>Accompagnées de leur crème à la truffe</span><span class="price">25€</span>
+            </div>  
+            <span class="element-hide"></span>
         </li>        
         <li class="listes">
-            <h3 class="listes__ennonces_menus">Caviar osciètre</h3>
-            <p class="listes__accompagnements">Sur blini à la farine de blé noir<span class="price">35€</span> </p>
+            <div>
+                <h3 class="listes__ennonces_menus">Caviar osciètre</h3>
+                <p class="listes__accompagnements"></p><span>Sur blini à la farine de blé noir</span><span class="price">35€</span> 
+            </div>
+            <span class="element-hide"></span>
         </li>   
         <li class="listes">
-            <h3 class="listes__ennonces_menus">Homard et espuma de potiron</h3>
-            <p class="listes__accompagnements">Marinés aux zestes d'orange <span class="price">20€</span></p>
-    </li>   
+            <div>
+                <h3 class="listes__ennonces_menus">Homard et espuma de potiron</h3>
+                <p class="listes__accompagnements"></p><span>Marinés aux zestes d'orange</span> <span class="price">20€</span>
+            </div>
+            <span class="element-hide"></span>
+        </li>   
     </ul>
 </section>
 
@@ -53,16 +61,25 @@
     <h2 class="plats__title">PLATS</h2>
     <ul class="blocks">
         <li class="listes">
-            <h3 class="listes__ennonces_menus">Noix de coquilles Saint-Jacques</h3>
-            <p class="listes__accompagnements">Sur lit de purée de céleri-rave <span class="price">40€</span></p>
+            <div>
+                <h3 class="listes__ennonces_menus">Noix de coquilles Saint-Jacques</h3>
+                <p class="listes__accompagnements"></p><span>Sur lit de purée de céleri-rave</span> <span class="price">40€</span>
+            </div>
+            <span class="element-hide"></span>
         </li>
         <li class="listes">
-            <h3 class="listes__ennonces_menus" >Langoustine poêlée</h3>
-            <p class="listes__accompagnements">Purée de patate douce <span class="price">35€</span></p>
+            <div>
+                <h3 class="listes__ennonces_menus" >Langoustine poêlée</h3>
+                <p class="listes__accompagnements"></p><span>Purée de patate douce</span> <span class="price">35€</span>
+            </div>
+            <span class="element-hide"></span>
         </li>
         <li class="listes">
-            <h3 class="listes__ennonces_menus" >Mijoté de queue de bœuf </h3>
-            <p class="listes__accompagnements">Et riz sauvage aux zestes de citron<span class="price">44€</span></p>
+            <div>
+                <h3 class="listes__ennonces_menus" >Mijoté de queue de bœuf </h3>
+                <p class="listes__accompagnements"></p><span>Et riz sauvage aux zestes de citron</span><span class="price">44€</span>
+            </div>
+            <span class="element-hide"></span>
         </li>
     </ul>
 </section>
@@ -71,17 +88,25 @@
     <h2 class="desserts__title" >DESSERTS</h2>
     <ul class="blocks">
         <li class="listes">
-            <h3 class="listes__ennonces_menus">Macaron noisette et chocolat</h3>
-            <p class="listes__accompagnements">Glace au caramel brun et sel de Guérande<span class="price">18€</span></p>
+            <div>
+                <h3 class="listes__ennonces_menus">Macaron noisette et chocolat</h3>
+                <p class="listes__accompagnements"></p><span>Glace au caramel brun et sel de Guérande</span><span class="price">18€</span>
+            </div>
+            <span class="element-hide"></span>
         </li>
         <li class="listes">
-            <h3 class="listes__ennonces_menus">Baba au rhum revisité</h3>
-            <p class="listes__accompagnements">Avec son coulis de citron<span class="price">22€</span></p>
+            <div>
+                <h3 class="listes__ennonces_menus">Baba au rhum revisité</h3>
+                <p class="listes__accompagnements"></p><span>Avec son coulis de citron</span><span class="price">22€</span>
+            </div>
+            <span class="element-hide"></span>
         </li>
         <li class="listes" >
-            <h3 class="listes__ennonces_menus" >Tarte au citron meringuée </h3>
-            <p class="listes__accompagnements">Déstructurée<span class="price">23€</span></p>
-            
+            <div>
+                <h3 class="listes__ennonces_menus" >Tarte au citron meringuée </h3>
+                <p class="listes__accompagnements"></p><span>Déstructurée</span><span class="price">23€</span>
+            </div>
+            <span class="element-hide"></span>
         </li>
     </ul>
 </section>
@@ -97,7 +122,7 @@
     <div class="footer__lists" ><a class="footer__link"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a>
         <a class="footer__link"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a>
         <a class="footer__link">Mentions légales</a>
-        <a class="footer__link">Contact</a>
+        <a class="footer__link "href="mailto:contact@ohmyfood.com" > Contact </a>
     </div>
 </footer>
 
