reste seulement le loader

--- a/cartes-restaurants/alafrançaise.html
+++ b/cartes-restaurants/alafrançaise.html
@@ -34,24 +34,27 @@
     <h2 class="entrees__title">ENTREES</h2>
     <ul class="blocks">
         <li class="listes">
-            <div>
+            <div class="liste-container">
                 <h3 class="listes__ennonces_menus">Tartare de poulpe acidulé</h3> 
-                <p class="listes__accompagnements"></p><span>Aux zestes d'orange</span> <span class="price">25€</span>
+                <p class="listes__accompagnements"></p><span>Aux zestes d'orange</span> 
             </div>
+            <span class="price">25€</span>
             <div class="element-hide"></div>
         </li>        
         <li class="listes">
-            <div>
+            <div  class="liste-container">
                 <h3 class="listes__ennonces_menus">Velouté de légumes d'antan</h3>
-                <p class="listes__accompagnements"></p><span>Carotte, panais, topinambour</span><span class="price">35€</span> 
+                <p class="listes__accompagnements"></p><span>Carotte, panais, topinambour</span>
             </div>
+            <span class="price">35€</span> 
             <div class="element-hide"></div>
         </li>   
         <li class="listes">
-            <div>
+            <div  class="liste-container">
                 <h3 class="listes__ennonces_menus">Soupe à l'oignon</h3>
-                <p class="listes__accompagnements"></p><span>Revisitée</span><span class="price">20€</span>
+                <p class="listes__accompagnements"></p><span>Revisitée</span>
             </div>
+            <span class="price">20€</span>
             <div class="element-hide"></div>
         </li>   
     </ul>
@@ -61,24 +64,27 @@
     <h2 class="plats__title">PLATS</h2>
     <ul class="blocks">
         <li class="listes">
-            <div>
+            <div class="liste-container">
                 <h3 class="listes__ennonces_menus">Coquilles Saint-Jacques</h3>
-                <p class="listes__accompagnements"></p><span>Accompagnées d'une purée de panais</span><span class="price">40€</span>
+                <p class="listes__accompagnements"></p><span>Accompagnées d'une purée de panais</span>
             </div>
+            <span class="price">40€</span>
             <div class="element-hide"></div>
         </li>
         <li class="listes">
-            <div>
+            <div class="liste-container">
                 <h3 class="listes__ennonces_menus" >Magret de canard</h3>
-                <p class="listes__accompagnements"></p><span>Et parmentier de pommes de terre</span><span class="price">35€</span>
+                <p class="listes__accompagnements"></p><span>Et parmentier de pommes de terre</span>
             </div>
+            <span class="price">35€</span>
             <div class="element-hide"></div>
         </li>
         <li class="listes">
-            <div>
+            <div  class="liste-container">
                 <h3 class="listes__ennonces_menus" >Pigeonneau d’Ille-et-Vilaine</h3>
-                <p class="listes__accompagnements">Sur son lit de gnocchis aux légumes<span class="price">44€</span></p>
+                <p class="listes__accompagnements">Sur son lit de gnocchis aux légumes</p>
             </div>
+            <span class="price">44€</span>
             <div class="element-hide"></div>
         </li>
     </ul>
@@ -88,23 +94,28 @@
     <h2 class="desserts__title" >DESSERTS</h2>
     <ul class="blocks">
         <li class="listes">
+            <div class="liste-container">
                 <h3 class="listes__ennonces_menus">Pétales de violettes glacés</h3>
-                <p class="listes__accompagnements"></p><span>Et purée de noisettes</span><span class="price">18€</span>
+                <p class="listes__accompagnements"></p><span>Et purée de noisettes</span>
             </div>
+            <span class="price">18€</span>
             <div class="element-hide"></div>
         </li>
         <li class="listes">
-            <div>
+            <div  class="liste-container">
                 <h3 class="listes__ennonces_menus">Fondant au chocolat</h3>
-                <p class="listes__accompagnements"></p><span>Revisité</span><span class="price">22€</span>
-        </div>
+                <p class="listes__accompagnements"></p><span>Revisité</span>
+            </div>
+            <span class="price">22€</span>
         <div class="element-hide"></div>
         </li>
         <li class="listes" >
-            <div>
+            <div class="liste-container">
                 <h3 class="listes__ennonces_menus" >Millefeuille croustillant</h3>
-                <p class="listes__accompagnements"></p><span>Myrtilles et pâte d’amande</span><span class="price">23€</span>
+                <p class="listes__accompagnements"></p><span>Myrtilles et pâte d’amande</span>
             </div>
+            <span class="price">23€</span>
+            <div class="element-hide"></div>
         </li>
     </ul>
 </section>
