--- a/cartes-restaurants/ledelicedessens.html
+++ b/cartes-restaurants/ledelicedessens.html
@@ -34,24 +34,27 @@
     <h2 class="entrees__title">ENTREES</h2>
     <ul class="blocks">
         <li class="listes">
-            <div>
+            <div class="liste-container">
                 <h3 class="listes__ennonces_menus">Tartare de thon</h3> 
-                <p class="listes__accompagnements"></p><span>Assaisonné au yuzu</span><span class="price">25€</span>
+                <p class="listes__accompagnements"></p><span>Assaisonné au yuzu</span>
             </div>
+            <span class="price">25€</span>
             <span class="element-hide"></span>
         </li>        
         <li class="listes">
-            <div>
+            <div class="liste-container">
                 <h3 class="listes__ennonces_menus">Bouchée de homard croustillant </h3>
-                <p class="listes__accompagnements"></p><span>Et sa farandole de petits légumes</span> <span class="price">35€</span> 
+                <p class="listes__accompagnements"></p><span>Et sa farandole de petits légumes</span>
             </div>
+            <span class="price">35€</span> 
             <span class="element-hide"></span>
         </li>   
         <li class="listes">
-            <div>
+            <div class="liste-container">
                 <h3 class="listes__ennonces_menus">Poulet rôti aux herbes de Provence</h3>
-                <p class="listes__accompagnements"></p><span>Et sa crème de truffe</span><span class="price">20€</span>
+                <p class="listes__accompagnements"></p><span>Et sa crème de truffe</span>
             </div>
+            <span class="price">20€</span>
             <span class="element-hide"></span>
         </li>   
     </ul>
@@ -61,24 +64,27 @@
     <h2 class="plats__title">PLATS</h2>
     <ul class="blocks">
         <li class="listes">
-            <div>
+            <div class="liste-container">
                 <h3 class="listes__ennonces_menus">Poulet rôti aux herbes de Provence </h3>
-                <p class="listes__accompagnements"></p><span>Et sa crème de truffe</span><span class="price">40€</span>
+                <p class="listes__accompagnements"></p><span>Et sa crème de truffe</span>
             </div>
+            <span class="price">40€</span>
             <span class="element-hide"></span>
         </li>
         <li class="listes">
-            <div>
+            <div class="liste-container">
                 <h3 class="listes__ennonces_menus" >Langouste rôtie </h3>
-                <p class="listes__accompagnements"></p><span>Et ses légumes de saison</span><span class="price">35€</span>
+                <p class="listes__accompagnements"></p><span>Et ses légumes de saison</span>
             </div>
+            <span class="price">35€</span>
             <span class="element-hide"></span>
         </li>
         <li class="listes">
-            <div>
+            <div class="liste-container">
                 <h3 class="listes__ennonces_menus" >Côte de bœuf Angus </h3>
-                <p class="listes__accompagnements"></p><span>Et sa purée de panais</span><span class="price">44€</span>
+                <p class="listes__accompagnements"></p><span>Et sa purée de panais</span>
             </div>
+            <span class="price">44€</span>
             <span class="element-hide"></span>
         </li>
     </ul>
@@ -88,24 +94,27 @@
     <h2 class="desserts__title" >DESSERTS</h2>
     <ul class="blocks">
         <li class="listes">
-            <div>
+            <div class="liste-container">
                 <h3 class="listes__ennonces_menus">Farandole de desserts</h3>
-                <p class="listes__accompagnements"></p><span>Du chef</span><span class="price">18€</span>
+                <p class="listes__accompagnements"></p><span>Du chef</span>
             </div>
+            <span class="price">18€</span>
             <span class="element-hide"></span>
         </li>
         <li class="listes">
-            <div>
+            <div class="liste-container">
                 <h3 class="listes__ennonces_menus">Crème brûlée</h3>
-                <p class="listes__accompagnements"></p><span>Revisitée</span><span class="price">22€</span>
+                <p class="listes__accompagnements"></p><span>Revisitée</span>
             </div>
+            <span class="price">22€</span>
             <span class="element-hide"></span>
         </li>
         <li class="listes" >
-            <div>
+            <div class="liste-container">
                 <h3 class="listes__ennonces_menus" >Tiramisu</h3>
-                <p class="listes__accompagnements"></p><span>A la noisette</span><span class="price">23€</span>
+                <p class="listes__accompagnements"></p><span>A la noisette</span>
             </div>
+            <span class="price">23€</span>
             <span class="element-hide"></span>
         </li>
     </ul>
