--- a/cartes-restaurants/noteenchantee.html
+++ b/cartes-restaurants/noteenchantee.html
@@ -34,24 +34,27 @@
     <h2 class="entrees__title">ENTREES</h2>
     <ul class="blocks">
         <li class="listes">
-            <div>
+            <div class="liste-container">
                 <h3 class="listes__ennonces_menus">Ravioles de foie gras</h3>
-                <p class="listes__accompagnements"></p><span>Accompagnées de leur crème à la truffe</span><span class="price">25€</span>
+                <p class="listes__accompagnements"></p><span>Accompagnées de leur crème à la truffe</span>
             </div>  
+            <span class="price">25€</span>
             <span class="element-hide"></span>
         </li>        
         <li class="listes">
-            <div>
+            <div class="liste-container">
                 <h3 class="listes__ennonces_menus">Caviar osciètre</h3>
-                <p class="listes__accompagnements"></p><span>Sur blini à la farine de blé noir</span><span class="price">35€</span> 
+                <p class="listes__accompagnements"></p><span>Sur blini à la farine de blé noir</span>
             </div>
+            <span class="price">35€</span> 
             <span class="element-hide"></span>
         </li>   
         <li class="listes">
-            <div>
+            <div class="liste-container">
                 <h3 class="listes__ennonces_menus">Homard et espuma de potiron</h3>
-                <p class="listes__accompagnements"></p><span>Marinés aux zestes d'orange</span> <span class="price">20€</span>
+                <p class="listes__accompagnements"></p><span>Marinés aux zestes d'orange</span>
             </div>
+            <span class="price">20€</span>
             <span class="element-hide"></span>
         </li>   
     </ul>
@@ -61,24 +64,27 @@
     <h2 class="plats__title">PLATS</h2>
     <ul class="blocks">
         <li class="listes">
-            <div>
+            <div class="liste-container">
                 <h3 class="listes__ennonces_menus">Noix de coquilles Saint-Jacques</h3>
-                <p class="listes__accompagnements"></p><span>Sur lit de purée de céleri-rave</span> <span class="price">40€</span>
+                <p class="listes__accompagnements"></p><span>Sur lit de purée de céleri-rave</span>
             </div>
+            <span class="price">40€</span>
             <span class="element-hide"></span>
         </li>
         <li class="listes">
-            <div>
+            <div class="liste-container">
                 <h3 class="listes__ennonces_menus" >Langoustine poêlée</h3>
-                <p class="listes__accompagnements"></p><span>Purée de patate douce</span> <span class="price">35€</span>
+                <p class="listes__accompagnements"></p><span>Purée de patate douce</span>
             </div>
+            <span class="price">35€</span>
             <span class="element-hide"></span>
         </li>
         <li class="listes">
-            <div>
+            <div class="liste-container">
                 <h3 class="listes__ennonces_menus" >Mijoté de queue de bœuf </h3>
-                <p class="listes__accompagnements"></p><span>Et riz sauvage aux zestes de citron</span><span class="price">44€</span>
+                <p class="listes__accompagnements"></p><span>Et riz sauvage aux zestes de citron</span>
             </div>
+            <span class="price">44€</span>
             <span class="element-hide"></span>
         </li>
     </ul>
@@ -88,24 +94,27 @@
     <h2 class="desserts__title" >DESSERTS</h2>
     <ul class="blocks">
         <li class="listes">
-            <div>
+            <div class="liste-container">
                 <h3 class="listes__ennonces_menus">Macaron noisette et chocolat</h3>
-                <p class="listes__accompagnements"></p><span>Glace au caramel brun et sel de Guérande</span><span class="price">18€</span>
+                <p class="listes__accompagnements"></p><span>Glace au caramel brun et sel de Guérande</span>
             </div>
+            <span class="price">18€</span>
             <span class="element-hide"></span>
         </li>
         <li class="listes">
-            <div>
+            <div class="liste-container">
                 <h3 class="listes__ennonces_menus">Baba au rhum revisité</h3>
-                <p class="listes__accompagnements"></p><span>Avec son coulis de citron</span><span class="price">22€</span>
+                <p class="listes__accompagnements"></p><span>Avec son coulis de citron</span>
             </div>
+            <span class="price">22€</span>
             <span class="element-hide"></span>
         </li>
         <li class="listes" >
-            <div>
+            <div class="liste-container">
                 <h3 class="listes__ennonces_menus" >Tarte au citron meringuée </h3>
-                <p class="listes__accompagnements"></p><span>Déstructurée</span><span class="price">23€</span>
+                <p class="listes__accompagnements"></p><span>Déstructurée</span>
             </div>
+            <span class="price">23€</span>
             <span class="element-hide"></span>
         </li>
     </ul>
